FROM_UPSTREAM [VPG]: drm/i915/chv: calculate rc6 residency correctly

The register to read cz count is different from vlv. Also
the counts returned from CCK_CTL1 for BSW are (ticks in 30ns - 1).
czcount_30ns of value 1 is a special case for 320Mhz.

Issue: GMINL-4094
Change-Id: Id20fece5493b2738384b587d324b9099890a7682
Upstream-repo: git://anongit.freedesktop.org/drm-intel
Upstream-commit: 542a6b205b184ec90e2108aaebaf8ba16128baec
Upstream-as-of-tag: drm-intel-nightly
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=80703
Suggested-by: Deepak S <deepak.s@linux.intel.com>
Cc: Jesse Barnes <jbarnes@virtuousgeek.org>
Signed-off-by: Mika Kuoppala <mika.kuoppala@intel.com>
Tested-by: Guo Jinxian <jinxianx.guo@intel.com>
Reviewed-by: Deepak S <deepak.s@linux.intel.com>
Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>
Signed-off-by: Deepak S <deepak.s@intel.com>